k8s/ingress-nginx/ingress-myapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    - test.tgops.cc
    secretName: demo-tls-ingress-secret
  rules:
  - host: test.tgops.cc
    http:
      paths:
      - path:
        backend:
          serviceName: myapp
          servicePort: 80
